# spacedb

./: .commitlintrc.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  commitlint.yml  release-plz.yml
example/: Cargo.toml
example/src/: main.rs
src/: db.rs  encode.rs  fs.rs  lib.rs  node.rs  path.rs  path_test.rs  subtree.rs  tx.rs  wasm.rs
tests/: integration_test.rs
