workspace = { members = ["example"] }

[package]
name = "spacedb"
version = "0.0.5"
edition = "2021"
description = "A cryptographically verifiable data store and universal accumulator for the Spaces protocol."
repository = "https://github.com/spacesprotocol/spacedb"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
libc = { version = "0.2.150", optional = true }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", optional = true }

# optional wasm feature
wasm-bindgen = { version ="0.2.100", optional = true }
js-sys = { version = "0.3.77", optional = true }

[dev-dependencies]
rand = "0.8.5"

[dependencies.sha2]
version = "0.10.6"

[features]
default = ["std"]
std = ["libc", "hex", "bincode/derive", "bincode/std"]
wasm = ["wasm-bindgen", "js-sys"]
